.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Learning_Provider__c.object
<CustomObject>
    <description>This object is migrated to learning package. Any configurations/customisation related to this object should be done in learning package</description>
    <fields>
        <fullName>xcdhcm__Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company_phone__c</fullName>
        <label>Company phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Contact_phone__c</fullName>
        <label>Primary contact phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cost_per_day__c</fullName>
        <inlineHelpText>Enter the average or approximate cost of one day&apos;s training with this provider</inlineHelpText>
        <label>Cost per day (avg.)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Learning_expertise__c</fullName>
        <label>Learning expertise</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Main_contact__c</fullName>
        <label>Primary contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Main_contact_job_title__c</fullName>
        <label>Primary contact job title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Presenters__c</fullName>
        <label>Presenters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Primary_contact_email_address__c</fullName>
        <label>Primary contact email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Web_address__c</fullName>
        <label>Web address</label>
        <type>Url</type>
    </fields>
    <label>Learning Provider</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Main_contact__c</columns>
        <columns>xcdhcm__Main_contact_job_title__c</columns>
        <columns>xcdhcm__Contact_phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Provider name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Providers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>